--- a/index.css
+++ b/index.css
@@ -2,11 +2,17 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 * {
 	outline: none !important;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .container,
@@ -14,8 +20,27 @@ body {
 	padding-top: 10px;
 }
 
+.nav-tabs {
+	width: 280px;
+	display: inline-block;
+}
+
 .nav-tabs li a {
 	padding: 5px 10px !important;
+}
+
+.dropdown {
+	display: inline-block;
+	float: right;
+	cursor: pointer;
+	/*margin-top: 5px;*/
+	/*margin-right: 5px;*/
+}
+
+.dropdown-menu-right {
+	height: 180px;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .category-wrapper span {
@@ -50,7 +75,7 @@ body {
 
 .word {
 	display: inline-block;
-	width: 19%;
+	width: 18.9%;
 	height: 8px;
 }
 
@@ -63,3 +88,43 @@ body {
 	height: 18px;
 	margin-bottom: 5px;
 }
+
+#avatars div {
+	display: inline-block;
+	margin-bottom: 5px;
+	width: 85px;
+	/*height: 80px;*/
+}
+
+#avatars {
+	margin: auto;
+	/*width: 352px;*/
+}
+
+#avatars img {
+	height: 100%;
+	width: 100%;
+}
+
+#avatars .load-new {
+	background: #474747;
+	color: white;
+	width: 84px;
+	height: 84px;
+	float: right;
+	margin-right: 8px;
+	margin-top: 1px;
+	position: relative;
+	cursor: pointer;
+}
+
+#avatars .load-new span {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 700;
+	position: absolute;
+	top: 38%;
+	display: block;
+	width: 100%;
+	text-align: center;
+}
+
